--- a/angular.json
+++ b/angular.json
@@ -48,7 +48,8 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "outputPath": "dist/imafuu-front/browser"
           },
           "configurations": {
             "production": {
@@ -70,8 +71,7 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "outputHashing": "all",
-              "outputPath": "dist/prod/imafuu-front"
+              "outputHashing": "all"
             },
             "stage": {
               "buildOptimizer": false,
@@ -85,8 +85,7 @@
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.stage.ts"
                 }
-              ],
-              "outputPath": "dist/stage/imafuu-front"
+              ]
             },
             "development": {
               "buildOptimizer": false,
@@ -94,8 +93,7 @@
               "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
-              "namedChunks": true,
-              "outputPath": "dist/dev/imafuu-front"
+              "namedChunks": true
             }
           },
           "defaultConfiguration": "production"
@@ -142,6 +140,79 @@
             ],
             "scripts": []
           }
+        },
+        "server": {
+          "builder": "@angular-devkit/build-angular:server",
+          "options": {
+            "outputPath": "dist/imafuu-front/server",
+            "main": "server.ts",
+            "tsConfig": "tsconfig.server.json",
+            "inlineStyleLanguage": "scss"
+          },
+          "configurations": {
+            "production": {
+              "outputHashing": "media",
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ]
+            },
+            "stage": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.stage.ts"
+                }
+              ],
+              "optimization": false,
+              "sourceMap": true,
+              "extractLicenses": false
+            },
+            "development": {
+              "optimization": false,
+              "sourceMap": true,
+              "extractLicenses": false
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve-ssr": {
+          "builder": "@nguniversal/builders:ssr-dev-server",
+          "options": {
+            "port": 4367
+          },
+          "configurations": {
+            "development": {
+              "browserTarget": "imafuu-front:build:development",
+              "serverTarget": "imafuu-front:server:development"
+            },
+            "production": {
+              "browserTarget": "imafuu-front:build:production",
+              "serverTarget": "imafuu-front:server:production"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "prerender": {
+          "builder": "@nguniversal/builders:prerender",
+          "options": {
+            "routes": [
+              "/"
+            ]
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "imafuu-front:build:production",
+              "serverTarget": "imafuu-front:server:production"
+            },
+            "development": {
+              "browserTarget": "imafuu-front:build:development",
+              "serverTarget": "imafuu-front:server:development"
+            }
+          },
+          "defaultConfiguration": "production"
         }
       }
     }
