--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "build:stage": "ng build -c stage",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev:ssr": "ng run imafuu-front:serve-ssr",
+    "serve:ssr": "node dist/imafuu-front/server/main.js",
+    "build:ssr": "ng build && ng run imafuu-front:server",
+    "prerender": "ng run imafuu-front:prerender"
   },
   "private": true,
   "dependencies": {
@@ -20,8 +24,11 @@
     "@angular/material": "12.2.12",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
+    "@angular/platform-server": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@nguniversal/express-engine": "^12.1.3",
     "ckeditor4-angular": "^2.2.2",
+    "express": "^4.15.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -30,7 +37,9 @@
     "@angular-devkit/build-angular": "~12.2.13",
     "@angular/cli": "~12.2.13",
     "@angular/compiler-cli": "~12.2.0",
+    "@nguniversal/builders": "^12.1.3",
     "@types/ckeditor": "^4.9.10",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
