--- a/angular.json
+++ b/angular.json
@@ -48,8 +48,7 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
-            "scripts": [],
-            "outputPath": "dist/imafuu-front/browser"
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -71,7 +70,8 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "outputPath": "dist/imafuu-front/production"
             },
             "stage": {
               "buildOptimizer": false,
@@ -85,7 +85,8 @@
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.stage.ts"
                 }
-              ]
+              ],
+              "outputPath": "dist/imafuu-front/stage"
             },
             "development": {
               "buildOptimizer": false,
@@ -93,7 +94,8 @@
               "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
-              "namedChunks": true
+              "namedChunks": true,
+              "outputPath": "dist/imafuu-front/development"
             }
           },
           "defaultConfiguration": "production"
