テナント設定追加

--- a/angular.json
+++ b/angular.json
@@ -216,6 +216,9 @@
           },
           "defaultConfiguration": "production"
         }
+      },
+      "i18n": {
+        "sourceLocale": "ja-JP"
       }
     }
   },
