--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@angular-devkit/build-angular": "~12.2.13",
     "@angular/cli": "~12.2.13",
     "@angular/compiler-cli": "~12.2.0",
+    "@angular/localize": "12.2.13",
     "@nguniversal/builders": "^12.1.3",
     "@types/ckeditor": "^4.9.10",
     "@types/express": "^4.17.0",
