--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~12.2.0",
     "@nguniversal/express-engine": "^12.1.3",
     "ckeditor4-angular": "^2.2.2",
+    "date-fns": "^2.27.0",
     "express": "^4.15.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
